--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@formatjs/intl-localematcher": "^0.5.10",
     "@mui/material": "^6.2.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.5.0",
     "eslint-config-next": "^15.1.2",
+    "framer-motion": "^11.16.1",
+    "js-cookie": "^3.0.5",
+    "negotiator": "^1.0.0",
     "next": "^15.1.2",
     "postcss": "^8.4.38",
     "react": "^19.0.0-rc.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0-rc.1",
     "swiper": "^11.1.15",
     "tailwindcss": "^3.4.17"
